# oxidesk

./: .clippy.toml  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  REMOVING_DB_FROM_APPSTATE.md  SLA_IMPLEMENTATION_COMPLETE.md  rustfmt.toml
docs/: password-reset-api.md
migrations/mysql/: 001_create_users.sql  002_seed_roles_permissions.sql  003_create_inboxes.sql  006_create_conversations.sql  007_create_messages.sql  008_add_conversation_message_fields.sql  009_create_teams.sql  010_create_team_memberships.sql  011_add_assignment_fields.sql  012_create_conversation_participants.sql  013_add_agent_availability.sql  014_create_assignment_history.sql  016_create_tags.sql  017_create_conversation_tags.sql  018_seed_tag_permissions.sql  019_extend_agent_availability.sql  020_create_agent_activity_logs.sql  021_seed_availability_config.sql  022_create_sla_policies.sql  023_create_applied_slas.sql  024_create_sla_events.sql  025_add_business_hours_and_cascade.sql  026_seed_sla_permissions.sql  027_create_automation_rules.sql  028_create_rule_evaluation_logs.sql  030_create_macros.sql  031_create_macro_actions.sql  032_create_macro_access.sql  033_create_macro_application_logs.sql  034_add_message_macro_actions.sql  040_create_user_notifications.sql  050_create_webhooks.sql  051_create_webhook_deliveries.sql  053_create_oidc_providers.sql  055_create_oidc_states.sql  056_add_role_protection.sql  057_add_api_key_fields.sql  058_add_email_uniqueness_per_type.sql  060_password_reset_indexes.sql  061_add_closed_at_timestamp.sql  (+7 more)
migrations/postgres/: 001_create_users.sql  002_seed_roles_permissions.sql  003_create_inboxes.sql  006_create_conversations.sql  007_create_messages.sql  (+31 more)
src/: bootstrap.rs  config.rs  lib.rs  main.rs  utils.rs
templates/: agent_created.html  agent_dashboard.html  agent_reply_email.html  agents.html  agents_new.html  base.html  base_clean.html  contact_profile.html  contacts.html  contacts_edit.html  contacts_new.html  conversations_new.html  dashboard.html  inbox.html  login.html  password_reset_email.html  public_conversation.html  roles.html  teams.html
tests/: TEST_GUIDELINES.md  test_action_executor.rs  test_admin_init.rs  test_agent_availability.rs  test_agent_service_flow.rs  test_agents.rs  test_assignment_system.rs  test_automation_edge_cases.rs  test_automation_integration.rs  test_automation_rules.rs  test_automation_service.rs  test_cardinality_invariants.rs  test_condition_evaluator.rs  test_contacts.rs  test_conversation_tagging.rs  test_conversations.rs  test_email_integration.rs  test_messages.rs  test_mutual_exclusion.rs  test_password_reset_cleanup.rs  test_password_reset_complete.rs  test_password_reset_expiry.rs  test_password_reset_rate_limit.rs  test_password_reset_request.rs  test_password_reset_security.rs  test_password_reset_session.rs  test_password_reset_token_reuse.rs  test_password_reset_transaction.rs  test_priority_management.rs  test_rbac_assignment_filtering.rs  test_rbac_multiple_roles.rs  test_rbac_permissions.rs  test_rbac_protected_roles.rs  test_session_password_change.rs  test_sla_lifecycle.rs  test_sla_policy_application.rs  test_state_machine.rs  test_status_transitions.rs
(+390 files in other folders)
